--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -21,7 +21,7 @@
 
 .root {
   all: initial;
-  z-index: var(--z-index-toolbar);
+  z-index: calc(var(--z-index-chat) + 1);
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
