--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -21,8 +21,9 @@
   --default-border-radius: 5px;
   --default-transition-duration: 150ms;
   /* Layers */
-  --z-index-dropdown: 10;
-  --z-index-toolbar: 1;
+  --z-index-dropdown: 100;
+  --z-index-sidebar: 50;
+  --z-index-chat: 20;
   /* Colors */
   --color-primary: #8601b0;
   --color-empty: #b8b8b8;
